src/test/06-Errors/error-empty-comment.txt
error-empty-comment.ck:2:12: syntax error
[2]  comment */
               ^
